--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -6,30 +6,15 @@
   </head>
   <body>
     <p class="title">Rock Paper Scissors!</p>
-    <button
-      onclick="
-      playGame('rock');
-    "
-      class="move-button"
-    >
+    <button onclick="playGame('rock');" class="move-button">
       <img src="images/rock-emoji.png" class="move-icon" />
     </button>
 
-    <button
-      onclick="
-      playGame('paper');
-    "
-      class="move-button"
-    >
+    <button onclick="playGame('paper');" class="move-button">
       <img src="images/paper-emoji.png" class="move-icon" />
     </button>
 
-    <button
-      onclick="
-      playGame('scissors');
-    "
-      class="move-button"
-    >
+    <button onclick="playGame('scissors');" class="move-button">
       <img src="images/scissors-emoji.png" class="move-icon" />
     </button>
 
@@ -37,16 +22,9 @@
     <p class="js-moves"></p>
     <p class="js-score score"></p>
 
-    <button
-      onclick="
-      score.wins = 0;
-      score.losses = 0;
-      score.ties = 0;
+    <button onclick="score.wins = 0;  score.losses = 0; score.ties = 0;
       localStorage.removeItem('score');
-      updateScoreElement();
-    "
-      class="reset-score-button"
-    >
+      updateScoreElement();" class="reset-score-button">
       Reset Score
     </button>
 
